--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar">
         <a href="#" class="logo">Portfolio.</a>
         <ul>
-            <li><a href="a1">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="about.html">About me</a></li>
         </ul>
