--- a/Snake2d.html
+++ b/Snake2d.html
@@ -28,7 +28,7 @@
             <div class="home-img">
                 <div class="img-box">
                  <div class="img-item">
-                  <img src="D:\CV\Portfolio\video games\2games.png" alt="g1">
+                  <img src="video games\2games.png" alt="g1">
                   </div>
                 </div>  
              </div> 
