--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
                 swaps, accompanied by sound effects for an enhanced experience.</p>
 
             <div class="btn-sci">
-                <a href="D:\Self Learning\Proiecte personale\Vizualizator sortare\index.html" class="btn">Test it</a>
+                <a href="Sorting Visualiser\index.html" class="btn">Test it</a>
             </div>  
             <h3>Facial Recognition using Javascript.</h3>  
             <p3>A JavaScript project utilizing the Face API.js library to implement facial recognition directly in the browser. It detects and
