--- a/anti-spoofing.html
+++ b/anti-spoofing.html
@@ -23,11 +23,11 @@
         <div class="home-info">
             <h1>Authentication using facial recognition algorithms with anti-spoofing</h1>
             <div class="btn-sci">
-                <a href="D:\CV\Portfolio\Face Recognition Python\rezumat_proiect.pdf" download class="btn">Download presentation</a>
-                <a href="D:\CV\Portfolio\Face Recognition Python\Anexa1.pdf" download class="btn">Download source code</a>
+                <a href="Face Recognition Python\rezumat_proiect.pdf" download class="btn">Download presentation</a>
+                <a href="Face Recognition Python\Anexa1.pdf" download class="btn">Download source code</a>
             </div>  
             <video width="640" height="360" controls>
-                <source src="D:\CV\Portfolio\Face Recognition Python\video.mp4" type="video/mp4">
+                <source src="Face Recognition Python\video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
           
